@@ -88,7 +88,7 @@ class XMLRPCServer
         return newArray;
     }
 
-    private static AbstractMap fixMap(AbstractMap map) 
+    private static AbstractMap fixMap(AbstractMap map)
     {
         for (Map.Entry entry : (Set<Map.Entry>)map.entrySet()) {
             entry.setValue(fixValue(entry.getValue()));
@@ -115,7 +115,7 @@ class XMLRPCServer
         if (val.getClass().isArray()) {
             return fixArray((Object) val);
         } else if (val instanceof Byte) {
-            return new Integer(((Byte) val).intValue());
+            return Integer.valueOf(((Byte) val).intValue());
         } else if (val instanceof Character) {
             char[] array = new char[] {((Character) val).charValue() };
             return new String(array);
